# cheburaxa

./: CMakeLists.txt  README.md  setup.py
cmake/: cheburaxaConfig.cmake.in
examples/: example.cpp  example.ipynb
include/: cheburaxa.hpp  cheburaxa_linalg.hpp
python/: cheburaxa.cpp
